Bouton fonctionne enable disable

--- a/src/app/post-comment/post-comment.component.html
+++ b/src/app/post-comment/post-comment.component.html
@@ -1,11 +1,10 @@
 <div>
   <label>Champ de texte: <br />
-    <input #comment (keyup.enter)="textAreaEmpty()">
-
-    <p *ngIf="textAreaEmpty()">
-      <button (click)="sendComment(comment.value)">PAS Ajouter le commentaire</button>
+    <input #comment (keyup)="textAreaEmpty(comment.value)"/>
+    <p *ngIf="empty">
+      <button (click)="sendComment(comment.value)" disabled>Ajouter le commentaire</button>
     </p>
-    <p *ngIf="!textAreaEmpty()">
+    <p *ngIf="!empty">
       <button (click)="sendComment(comment.value)">Ajouter le commentaire</button>
     </p>
 
